--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fof/pages",
+  "name": "@ithauaz/pages",
   "version": "0.0.0",
   "dependencies": {
     "flarum-webpack-config": "0.1.0-beta.10",
